--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
-  provider: ^6.1.2
   shared_preferences: ^2.2.3
-
+  dio: ^5.5.0+1
+  image_picker: ^1.1.2
+  flutter_bloc: ^8.1.6
+  dartz: ^0.10.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
