--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_bloc: ^8.1.6
   dartz: ^0.10.1
+  get_it: ^7.7.0
   
 dev_dependencies:
   flutter_test:
