--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^7.7.0
   cached_network_image: ^3.4.0
+  intl: ^0.19.0
   
 dev_dependencies:
   flutter_test:
